argocd/apps/kickstart-http/kickstart-http-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kickstart-http
  namespace: kickstart-http
  labels:
    app: kickstart-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kickstart-http
  template:
    metadata:
      labels:
        app: kickstart-http
    spec:
      containers:
      - image: docker.io/nginx:1.27.4-alpine
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: kickstart-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: kickstart-config
        configMap:
          name: kickstart-config
          items:
            - key: ks-rocky10.cfg
              path: ks-rocky10.cfg
            - key: ubuntu26-cc
              path: ubuntu26/cloud-config.cfg
            - key: metadata
              path: ubuntu26/metadata.cfg
