argocd/apps/kickstart-http/kickstart-http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kickstart-http
  namespace: kickstart-http
  labels:
    app: kickstart-http
spec:
  selector:
    app: kickstart-http
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
