argocd/apps/kickstart-http/kickstart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kickstart-http-ingress
  namespace: kickstart-http
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kickstart.local.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kickstart-http
            port:
              number: 80
